<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.projectwithintents.MainActivity">
    <item
        android:id="@+id/Home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/Intents"
        android:orderInCategory="100"
        android:title="@string/intents"
        app:showAsAction="never" />
    <item
        android:id="@+id/Intents2"
        android:orderInCategory="100"
        android:title="@string/intents2"
        app:showAsAction="never" />
    <item
        android:id="@+id/Services"
        android:orderInCategory="100"
        android:title="@string/Services"
        app:showAsAction="never" />




    <!--<item
        android:id="@+id/Broadcast"
        android:orderInCategory="100"
        android:title="@string/broadcast"
        app:showAsAction="never" />-->

</menu>
