<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.intentsservicesbroadcast.ServicesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/layoutServices"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/layoutServices"
            android:layout_gravity="center"
            android:text="@string/clickOnButton"
            android:textColor="@color/myRedColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startService" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stopService" />

    </LinearLayout>

</RelativeLayout>